# hitechjobsca

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  README.md  build.gradle  build.sh  mvnw  pom.xml
apps/api/src/main/resources/: application.properties
apps/sync/: .dockerignore  .gitignore  Dockerfile  README.md  config.py  db.py  main.py  maintanence.sql  pyproject.toml  requirements.txt  sql-scripts.sql
apps/sync/scripts/: cronjob.sh  sendemail.sh
apps/sync/sources/: __init__.py  base.py  github_issues.py  so_rss.py  util.py
apps/sync/tests/: __init__.py  test_config.py  test_db.py  test_github_issues.py  test_main.py  test_so_rss.py  test_util.py
apps/sync/tests/fixtures/: github_issue.json  so_feed.xml
apps/web/: .dockerignore  .npmrc  Dockerfile  LICENSE.MD  bundle.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  webpack.config.js
apps/web/public/seo/: BingSiteAuth.xml  robots.txt  rss.xml  sitemap.htm  sitemap.txt  sitemap.xml
apps/web/public/style/: style.css
apps/web/seo/: BingSiteAuth.xml  rss.xml
apps/web/src/: index.jsx
apps/web/src/actions/: index.js
apps/web/src/containers/: ad_view.jsx  checkout_form.jsx  header.jsx  job_list.js  job_list.jsx  jobs_new.js  loading.jsx  main_page.jsx  navbar.js  post_single_job.js  post_single_job.jsx  search_job.jsx
apps/web/src/reducers/: index.js  reducer_jobs.js
apps/web/style/: style.css
db/init/: 01_schema.sql
(+17 files in other folders)
